--- a/mcp-client/build.gradle
+++ b/mcp-client/build.gradle
@@ -22,6 +22,10 @@ dependencies {
 	implementation "org.springframework.boot:spring-boot-starter-thymeleaf"
 	implementation "org.springframework.boot:spring-boot-starter-security"
 	implementation "org.springframework.boot:spring-boot-starter-oauth2-client"
+	implementation platform("org.springframework.ai:spring-ai-bom:1.0.1")
+	implementation "org.springframework.ai:spring-ai-starter-mcp-client"
+	implementation "org.springframework.ai:spring-ai-starter-model-anthropic"
+	implementation "io.modelcontextprotocol.sdk:mcp:0.11.0"
 	implementation "org.webjars:webjars-locator-lite"
 	implementation "org.webjars:bootstrap:5.2.3"
 	implementation "org.webjars:popper.js:2.9.3"
