--- a/mcp-client/src/main/resources/application.yml
+++ b/mcp-client/src/main/resources/application.yml
@@ -38,6 +38,13 @@ spring:
             authorization-grant-type: client_credentials
             scope: message.read,message.write
             client-name: messaging-client-client-credentials
+          registrar-client:
+            provider: spring
+            client-id: registrar-client
+            client-secret: secret2
+            authorization-grant-type: client_credentials
+            scope: client.create
+            client-name: registrar-client
         provider:
           spring:
             issuer-uri: http://localhost:9000
