--- a/mcp-client/src/main/resources/application.yml
+++ b/mcp-client/src/main/resources/application.yml
@@ -20,7 +20,7 @@ spring:
             client-id: oidc-client
             client-secret: secret
             authorization-grant-type: authorization_code
-            redirect-uri: "http://127.0.0.1:8080/login/oauth2/code/{registrationId}"
+            redirect-uri: "http://127.0.0.1:8080/login/oauth2/code/oidc-client"
             scope: openid, profile
             client-name: oidc-client
           registrar-client:
@@ -32,7 +32,7 @@ spring:
             client-name: registrar-client
         provider:
           spring:
-            issuer-uri: http://localhost:9000
+            issuer-uri: http://127.0.0.1:9000
 
 messages:
   base-uri: http://127.0.0.1:8090/messages
